fix(classloader): strip LocalVariableTypeTable attributes on ClassFormatError to handle JDK 25 strict verifier
JDK 25 rejects classes with duplicate LocalVariableTypeTable entries (e.g.
non-contiguous variable ranges in slf4j LoggerFactory). LVTT is debug-only
with no runtime effect. On ClassFormatError citing LVTT, BCEL strips all
LVTT attributes and retries defineClass.

See: https://github.com/qos-ch/slf4j/issues/483
Signed-off-by: Andreas Reichel <andreas@manticore-projects.com>